# vcsx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ai-tools.md  getting-started.md  hooks.md  skills.md  templates.md
examples/: example-claude-md.md  example-settings.json  example-skill.md
src/vcsx/: __init__.py  __main__.py  cli.py  discovery.py  implementation.py  planner.py
src/vcsx/core/: context.py  inference.py  scanner.py  validators.py
src/vcsx/generators/: _shared.py  agents_md.py  aider.py  base.py  bolt.py  claude_code.py  codex.py  copilot.py  cursor.py  gemini.py  registry.py  windsurf.py  zed.py
src/vcsx/plugins/: __init__.py
src/vcsx/templates/: __init__.py  engine.py
src/vcsx/utils/: prompts.py
tests/: test_cli.py  test_core.py  test_discovery.py  test_generators.py  test_main.py  test_planner.py  test_plugins.py  test_prompts.py  test_scanner.py  test_templates_engine.py
