[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcsx"
version = "5.18.0"
description = "Vibe Coding Setup Expert — Multi-CLI AI coding environment generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Vibe Coding Setup Expert Contributors", email = "barancanercan@gmail.com"}]
keywords = ["claude-code", "cursor", "codex", "copilot", "windsurf", "zed", "aider", "setup", "automation", "cli", "ai-coding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pyinstaller>=6.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
all = ["uv>=0.1.0"]

[project.scripts]
vcsx = "vcsx.cli:main"

[project.urls]
Homepage = "https://github.com/barancanercan/vcsx"
Documentation = "https://github.com/barancanercan/vcsx#readme"
"Bug Tracker" = "https://github.com/barancanercan/vcsx/issues"
Repository = "https://github.com/barancanercan/vcsx"
"Changelog" = "https://github.com/barancanercan/vcsx/releases"

[project.entry-points."vcsx.plugins"]
default = "vcsx.plugins.registry:load_default_plugins"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
skip_libs = ["rich", "click"]

[tool.pyinstaller]
name = "vcsx"
onefile = true
console = true
strip = true
upx = true

